<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.gestionpaiements</groupId>
    <artifactId>Gestion_des_paiements</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>Gestion des paiements</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.12.1</junit.version>
        <javafx.version>24.0.1</javafx.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.1</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>22</source>
                    <target>22</target>

                    <modulePath>
                        <dependency>javafx-controls</dependency>
                        <dependency>javafx-fxml</dependency>
                        <dependency>javafx-base</dependency>
                        <dependency>javafx-graphics</dependency>
                        <dependency>annotations</dependency>
                    </modulePath>

                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>javafx.controls,javafx.fxml,javafx.base,javafx.graphics</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <javafx-version>${javafx.version}</javafx-version>
                    <release>22</release>
                    <extraModules>
                        <extraModule>javafx.controls</extraModule>
                        <extraModule>javafx.fxml</extraModule>
                        <extraModule>javafx.base</extraModule>
                        <extraModule>javafx.graphics</extraModule>
                        <extraModule>org.jetbrains.annotations</extraModule>
                    </extraModules>

                    <mainClass>
                        com.gestion_paiements.gestion_des_paiements/HelloApplication
                    </mainClass>
                </configuration>
                <executions>
                    <execution>
                        <id>default-cli</id>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>